organizing files and folders

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" href="./assets/images/favicon-32x32.png">
     <title>Frontend Mentor | Interactive rating component</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <section class="card card_feedback active">
         <div class="star_icon">
-            <img src="./images/icon-star.svg" alt="Star Icon">
+            <img src="./assets/images/icon-star.svg" alt="Star Icon">
         </div>
         
         <h1 class="feedback_title">How did we do?</h1>
@@ -35,7 +35,7 @@
 
     <section class="card card_result">
         <div class="illustration_img">
-            <img src="./images/illustration-thank-you.svg" alt="Thank You Image">
+            <img src="./assets/images/illustration-thank-you.svg" alt="Thank You Image">
         </div>
 
         <div class="result_star">
