feedback card finished

--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
         </p>
         
         <div class="rating_stars">
-            <ul>
-                <li class="star_1">1</li>
-                <li class="star_2">2</li>
-                <li class="star_3">3</li>
-                <li class="star_4">4</li>
-                <li class="star_5">5</li>
+            <ul class="star-items">
+                <li class="star" value="1">1</li>
+                <li class="star" value="2">2</li>
+                <li class="star" value="3">3</li>
+                <li class="star" value="4">4</li>
+                <li class="star" value="5">5</li>
             </ul>
         </div>
         <button class="submit">Submit</button>
     </section>
 
-    <section class="card card_result">
+    <section class="card card_result hidden">
         <div class="illustration_img">
             <img src="./assets/images/illustration-thank-you.svg" alt="Thank You Image">
         </div>
@@ -48,7 +48,7 @@
         
         <p class="result_description">
             We appreciate you taking the time to give a rating. If you ever need more support, 
-            don’t hesitate to get in touch!
+            don't hesitate to get in touch!
         </p>
     </section>
 
@@ -58,5 +58,7 @@
             Coded by <a href="https://www.github.com/nathsantoliver">Nathália Oliveira</a>.
         </p>
     </footer>
+
+    <script src="./assets/js/index.js"></script>
 </body>
 </html>
