catching the chosed star to feedback card

--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
         </div>
 
         <div class="result_star">
-            <p>
-                You selected 4 out of 5
-            </p>
+            <p class="result_rating"></p>
         </div>
         
         <h1 class="result_title">Thank you!</h1>
